# t_time_ai

./: .gitignore  LICENSE
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: brsgolf.py  chronogolf.py  clubv1.py  intelligentgolf.py  webcrawler.py
backend/app/models/: tee_time.py
backend/app/scraping/: brsgolf.py  chronogolf.py  clubv1.py  intelligentgolf.py  webcrawler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: brsgolf.ts  chronogolf.ts  clubv1.ts  intelligentgolf.ts  webcrawler.ts
frontend/src/components/: TeeTimeTable.tsx  VendorTabs.tsx
frontend/src/pages/: BrsgolfPage.tsx  ChronogolfPage.tsx  Clubv1Page.tsx  IntelligentgolfPage.tsx  TeeSheetPage.tsx  WebcrawlerPage.tsx
